[gd_scene load_steps=3 format=3 uid="uid://djra87ar5vdie"]

[ext_resource type="Script" uid="uid://cmsrkf871u48v" path="res://Scenes/Main/main_ui/team_menu.gd" id="1_ts32l"]
[ext_resource type="PackedScene" uid="uid://boblaywavsmta" path="res://Scenes/Main/main_ui/add_beastie_ui.tscn" id="3_bav82"]

[node name="TeamMenu" type="ScrollContainer"]
custom_minimum_size = Vector2(805, 1494)
script = ExtResource("1_ts32l")

[node name="MainContainer" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 36
alignment = 1

[node name="ServeSlotUI" parent="MainContainer" instance=ExtResource("3_bav82")]
unique_name_in_owner = true
layout_mode = 2

[node name="NonServeSlotUI" parent="MainContainer" instance=ExtResource("3_bav82")]
unique_name_in_owner = true
layout_mode = 2
text = "Non Serve Slot"
pos = 2

[node name="BenchOneUI" parent="MainContainer" instance=ExtResource("3_bav82")]
unique_name_in_owner = true
layout_mode = 2
text = "Bench One"
pos = 4

[node name="BenchTwoUI" parent="MainContainer" instance=ExtResource("3_bav82")]
unique_name_in_owner = true
layout_mode = 2
text = "Bench Two"
pos = 5
